// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input/demo/addon.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          http://
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          .com
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          <div
            class="ant-select select-before ant-select-single ant-select-show-arrow"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="undefined_list_0"
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  readonly=""
                  role="combobox"
                  style="opacity:0"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="http://"
              >
                http://
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="on"
            >
              <span
                aria-label="arrow-down"
                class="anticon anticon-arrow-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          <div
            class="ant-select select-after ant-select-single ant-select-show-arrow"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="undefined_list_0"
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  readonly=""
                  role="combobox"
                  style="opacity:0"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title=".com"
              >
                .com
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="on"
            >
              <span
                aria-label="arrow-down"
                class="anticon anticon-arrow-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
        <span
          class="ant-input-group-addon"
        >
          <span
            aria-label="setting"
            class="anticon anticon-setting"
            role="img"
            style="color:#999999"
          >
            <svg
              aria-hidden="true"
              data-icon="setting"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          http://
        </span>
        <span
          class="ant-input-affix-wrapper"
        >
          <input
            class="ant-input"
            type="text"
            value="mysite"
          />
          <span
            class="ant-input-suffix"
          >
            .com
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-input-group-wrapper"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          <div
            class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
            style="width:150px"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  readonly=""
                  role="combobox"
                  style="opacity:0"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              >
                cascader
              </span>
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="on"
            >
              <span
                aria-label="arrow-down"
                class="anticon anticon-arrow-down ant-select-suffix"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/align.md correctly 1`] = `
Array [
  <div
    class="ant-mentions"
    style="width:100px"
  >
    <textarea
      class="rc-textarea"
      rows="1"
    />
  </div>,
  <textarea
    class="ant-input"
    rows="1"
    style="width:100px"
  />,
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>,
  <input
    class="ant-input"
    style="width:100px"
    type="text"
    value=""
  />,
  <span
    class="ant-typography"
  >
    Infra Design
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </span>,
  <span
    class="ant-input-affix-wrapper"
    style="width:100px"
  >
    <span
      class="ant-input-prefix"
    >
      1
    </span>
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      2
    </span>
  </span>,
  <span
    class="ant-input-group-wrapper"
    style="width:100px"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <span
        class="ant-input-group-addon"
      >
        1
      </span>
      <input
        class="ant-input"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        2
      </span>
    </span>
  </span>,
  <div
    class="ant-input-number"
    style="width:100px"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        autocomplete="off"
        class="ant-input-number-input"
        role="spinbutton"
        step="1"
        value=""
      />
    </div>
  </div>,
  <div
    class="ant-picker"
    style="width:100px"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select date"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-picker"
    style="width:100px"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select time"
        readonly=""
        size="10"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="clock-circle"
          class="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-select ant-select-single ant-select-show-arrow"
    style="width:100px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-item"
        title="Jack"
      >
        Jack
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="arrow-down"
        class="anticon anticon-arrow-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="arrow-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
    style="width:100px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      />
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="arrow-down"
        class="anticon anticon-arrow-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="arrow-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          readonly=""
          role="combobox"
          style="opacity:0"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-item"
        title="Zhejiang / Hangzhou / West Lake"
      >
        Zhejiang / Hangzhou / West Lake
      </span>
    </div>
    <span
      aria-hidden="true"
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="arrow-down"
        class="anticon anticon-arrow-down ant-select-suffix"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="arrow-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-hidden="true"
      class="ant-select-clear"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <span
        aria-label="close-fullfiled"
        class="anticon anticon-close-fullfiled"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-fullfiled"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-picker ant-picker-range"
  >
    <div
      class="ant-picker-input ant-picker-input-active"
    >
      <input
        autocomplete="off"
        placeholder="Start date"
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="ant-picker-range-separator"
    >
      <span
        aria-label="to"
        class="ant-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="End date"
        readonly=""
        size="12"
        value=""
      />
    </div>
    <div
      class="ant-picker-active-bar"
      style="left:0;width:0;position:absolute"
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-picker"
  >
    <div
      class="ant-picker-input"
    >
      <input
        autocomplete="off"
        placeholder="Select month"
        readonly=""
        size="12"
        title=""
        value=""
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
  </div>,
  <div
    class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
    style="width:100px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        input here
      </span>
    </div>
  </div>,
  <br />,
  <span
    class="ant-input-group-wrapper"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <span
        class="ant-input-group-addon"
      >
        Http://
      </span>
      <span
        class="ant-input-affix-wrapper"
      >
        <span
          class="ant-input-prefix"
        >
          $
        </span>
        <input
          class="ant-input"
          type="text"
          value="mysite"
        />
      </span>
      <span
        class="ant-input-group-addon"
      >
        .com
      </span>
    </span>
  </span>,
  <span
    class="ant-input-affix-wrapper"
    style="width:50px"
  >
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      Y
    </span>
  </span>,
  <input
    class="ant-input"
    style="width:50px"
    type="text"
    value=""
  />,
  <span
    class="ant-input-affix-wrapper"
    style="width:50px"
  >
    <input
      class="ant-input"
      type="text"
      value="1"
    />
    <span
      class="ant-input-suffix"
    >
      Y
    </span>
  </span>,
]
`;

exports[`renders ./components/input/demo/allowClear.md correctly 1`] = `
Array [
  <span
    class="ant-input-affix-wrapper"
  >
    <input
      class="ant-input"
      placeholder="input with clear icon"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-textarea-with-clear-btn"
  >
    <textarea
      class="ant-input"
      placeholder="textarea with clear icon"
    />
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
      role="button"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>,
]
`;

exports[`renders ./components/input/demo/autosize-textarea.md correctly 1`] = `
Array [
  <textarea
    class="ant-input"
    placeholder="Autosize height based on content lines"
  />,
  <div
    style="margin:24px 0"
  />,
  <textarea
    class="ant-input"
    placeholder="Autosize height with minimum and maximum number of lines"
  />,
  <div
    style="margin:24px 0"
  />,
  <textarea
    class="ant-input"
    placeholder="Controlled autosize"
  />,
]
`;

exports[`renders ./components/input/demo/basic.md correctly 1`] = `
<input
  class="ant-input ant-input-sm"
  placeholder="Basic usage"
  type="text"
  value=""
/>
`;

exports[`renders ./components/input/demo/borderless.md correctly 1`] = `
<input
  class="ant-input ant-input-borderless"
  placeholder="Borderless"
  type="text"
  value=""
/>
`;

exports[`renders ./components/input/demo/borderless-debug.md correctly 1`] = `
<div
  style="background-color:rgba(0, 0, 128, .2)"
>
  <input
    class="ant-input ant-input-borderless"
    placeholder="Unbordered"
    type="text"
    value=""
  />
  <input
    class="ant-input ant-input-lg ant-input-borderless"
    placeholder="Unbordered"
    type="text"
    value=""
  />
  <textarea
    class="ant-input ant-input-borderless"
    placeholder="Unbordered"
  />
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-textarea-with-clear-btn ant-input-affix-wrapper-borderless"
  >
    <textarea
      class="ant-input ant-input-borderless"
      placeholder="Unbordered"
    />
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
      role="button"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-borderless"
  >
    <input
      class="ant-input ant-input-borderless"
      placeholder="Unbordered"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-borderless"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input ant-input-borderless"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-disabled ant-input-affix-wrapper-borderless"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input ant-input-disabled ant-input-borderless"
      disabled=""
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>
</div>
`;

exports[`renders ./components/input/demo/focus.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
  style="width:100%"
>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap:wrap;margin-bottom:-16px"
    >
      <div
        class="ant-space-item"
        style="margin-right:16px;padding-bottom:16px"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Focus at first
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right:16px;padding-bottom:16px"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Focus at last
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right:16px;padding-bottom:16px"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Focus to select all
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right:16px;padding-bottom:16px"
      >
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Focus prevent scroll
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom:16px"
      >
        <button
          aria-checked="true"
          class="ant-switch ant-switch-checked"
          role="switch"
          type="button"
        >
          <div
            class="ant-switch-handle"
          />
          <span
            class="ant-switch-inner"
          >
            Input
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <br />
  </div>
  <div
    class="ant-space-item"
  >
    <input
      class="ant-input"
      style="width:100%"
      type="text"
      value="Infra Design love you!"
    />
  </div>
</div>
`;

exports[`renders ./components/input/demo/group.md correctly 1`] = `
<div
  class="site-input-group-wrapper"
>
  <span
    class="ant-input-group ant-input-group-lg"
  >
    <div
      class="ant-row"
      style="margin-left:-4px;margin-right:-4px"
    >
      <div
        class="ant-col ant-col-5"
        style="padding-left:4px;padding-right:4px"
      >
        <input
          class="ant-input"
          type="text"
          value="0571"
        />
      </div>
      <div
        class="ant-col ant-col-8"
        style="padding-left:4px;padding-right:4px"
      >
        <input
          class="ant-input"
          type="text"
          value="26888888"
        />
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:20%"
      type="text"
      value="0571"
    />
    <input
      class="ant-input"
      style="width:30%"
      type="text"
      value="26888888"
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:calc(100% - 200px)"
      type="text"
      value="https://ant.design"
    />
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Submit
      </span>
    </button>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:calc(100% - 200px)"
      type="text"
      value="git@github.com:ant-design/ant-design.git"
    />
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </button>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Zhejiang"
        >
          Zhejiang
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="Xihu District, Hangzhou"
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <span
      class="ant-input-group-wrapper ant-input-search"
      style="width:40%"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper"
        >
          <input
            class="ant-input"
            type="text"
            value="0571"
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-input-clear-icon"
              role="button"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:#999999"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="ant-input-group-wrapper ant-input-search"
      style="width:40%"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper"
        >
          <input
            class="ant-input"
            type="text"
            value="26888888"
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-input-clear-icon"
              role="button"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:#999999"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Option1"
        >
          Option1
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <div
      class="ant-input-number"
    >
      <div
        class="ant-input-number-handler-wrap"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="ant-input-number-handler ant-input-number-handler-up"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="up"
            class="anticon anticon-up ant-input-number-handler-up-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="up"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="ant-input-number-handler ant-input-number-handler-down"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down ant-input-number-handler-down-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="ant-input-number-input-wrap"
      >
        <input
          autocomplete="off"
          class="ant-input-number-input"
          role="spinbutton"
          step="1"
          value=""
        />
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:50%"
      type="text"
      value="input content"
    />
    <div
      class="ant-picker"
      style="width:50%"
    >
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="Select date"
          readonly=""
          size="12"
          title=""
          value=""
        />
        <span
          class="ant-picker-suffix"
        >
          <span
            aria-label="calendar"
            class="anticon anticon-calendar"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="calendar"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <input
      class="ant-input"
      style="width:30%"
      type="text"
      value="input content"
    />
    <div
      class="ant-picker ant-picker-range"
      style="width:70%"
    >
      <div
        class="ant-picker-input ant-picker-input-active"
      >
        <input
          autocomplete="off"
          placeholder="Start date"
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="ant-picker-range-separator"
      >
        <span
          aria-label="to"
          class="ant-picker-separator"
        >
          <span
            aria-label="swap-right"
            class="anticon anticon-swap-right"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="swap-right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        class="ant-picker-input"
      >
        <input
          autocomplete="off"
          placeholder="End date"
          readonly=""
          size="12"
          value=""
        />
      </div>
      <div
        class="ant-picker-active-bar"
        style="left:0;width:0;position:absolute"
      />
      <span
        class="ant-picker-suffix"
      >
        <span
          aria-label="calendar"
          class="anticon anticon-calendar"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="calendar"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.52 1c.27 0 .5.22.5.5V2H14a1 1 0 011 1v11a1 1 0 01-1 1H2a1 1 0 01-1-1V3a1 1 0 011-1h2v-.5a.5.5 0 011 0V2h6.02v-.5c0-.28.22-.5.5-.5zM14 6H2v8h12V6zm-2.5 5a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm6-3a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zm-3 0a.5.5 0 010 1h-1a.5.5 0 010-1h1zM4 3H2v2h12V3h-1.98v.5a.5.5 0 01-1 0V3H4.99v.5a.5.5 0 01-1 0V3z"
            />
          </svg>
        </span>
      </span>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Option1-1"
        >
          Option1-1
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Option2-2"
        >
          Option2-2
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Between"
        >
          Between
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <input
      class="ant-input"
      placeholder="Minimum"
      style="width:100px;text-align:center"
      type="text"
      value=""
    />
    <input
      class="ant-input ant-input-disabled site-input-split"
      disabled=""
      placeholder="~"
      style="width:30px;border-left:0;border-right:0;pointer-events:none"
      type="text"
      value=""
    />
    <input
      class="ant-input site-input-right"
      placeholder="Maximum"
      style="width:100px;text-align:center"
      type="text"
      value=""
    />
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
      style="width:30%"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Sign Up"
        >
          Sign Up
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
      style="width:70%"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            role="combobox"
            type="search"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-placeholder"
        >
          Email
        </span>
      </div>
    </div>
  </span>
  <br />
  <span
    class="ant-input-group ant-input-group-compact"
  >
    <div
      class="ant-select ant-select-single ant-select-show-arrow"
      style="width:30%"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-item"
          title="Home"
        >
          Home
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
      style="width:70%"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            readonly=""
            role="combobox"
            style="opacity:0"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="ant-select-selection-placeholder"
        >
          Select Address
        </span>
      </div>
      <span
        aria-hidden="true"
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down ant-select-suffix"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
            />
          </svg>
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`renders ./components/input/demo/password-input.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-affix-wrapper ant-input-password"
    >
      <input
        action="click"
        class="ant-input"
        placeholder="input password"
        type="password"
        value=""
      />
      <span
        class="ant-input-suffix"
      >
        <span
          aria-label="invisible"
          class="anticon anticon-invisible ant-input-password-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="invisible"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15.26 5.57a.5.5 0 01.17.69 8.9 8.9 0 01-3 3l1.02 2.02a.5.5 0 11-.9.44l-1-2c-.95.44-1.98.7-3.05.77V12a.5.5 0 01-1 .09v-1.6a8.53 8.53 0 01-3.05-.76l-1 2a.5.5 0 01-.93-.37l.03-.08 1.01-2.02a8.87 8.87 0 01-2.99-3 .5.5 0 11.86-.52A7.7 7.7 0 008 9.5a7.7 7.7 0 006.57-3.76.5.5 0 01.69-.17z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-input-affix-wrapper ant-input-password"
    >
      <input
        action="click"
        class="ant-input"
        placeholder="input password"
        type="password"
        value=""
      />
      <span
        class="ant-input-suffix"
      >
        <span
          aria-label="invisible"
          class="anticon anticon-invisible ant-input-password-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="invisible"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15.26 5.57a.5.5 0 01.17.69 8.9 8.9 0 01-3 3l1.02 2.02a.5.5 0 11-.9.44l-1-2c-.95.44-1.98.7-3.05.77V12a.5.5 0 01-1 .09v-1.6a8.53 8.53 0 01-3.05-.76l-1 2a.5.5 0 01-.93-.37l.03-.08 1.01-2.02a8.87 8.87 0 01-2.99-3 .5.5 0 11.86-.52A7.7 7.7 0 008 9.5a7.7 7.7 0 006.57-3.76.5.5 0 01.69-.17z"
            />
          </svg>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/presuffix.md correctly 1`] = `
Array [
  <span
    class="ant-input-affix-wrapper"
  >
    <span
      class="ant-input-prefix"
    >
      <span
        aria-label="user"
        class="anticon anticon-user site-form-item-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
          />
        </svg>
      </span>
    </span>
    <input
      class="ant-input"
      placeholder="Enter your username"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle"
        role="img"
        style="color:rgba(0,0,0,.45)"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-affix-wrapper"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-disabled"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input ant-input-disabled"
      disabled=""
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>,
]
`;

exports[`renders ./components/input/demo/search-input.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper ant-input-search"
      style="width:200px"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <input
          class="ant-input"
          placeholder="input search text"
          type="text"
          value=""
        />
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:#999999"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper ant-input-search"
      style="width:200px"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper"
        >
          <input
            class="ant-input"
            placeholder="input search text"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
              role="button"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:#999999"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper ant-input-search"
      style="width:304px"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-group-addon"
        >
          https://
        </span>
        <span
          class="ant-input-affix-wrapper"
        >
          <input
            class="ant-input"
            placeholder="input search text"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
              role="button"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-icon-only ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:#999999"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper ant-input-search ant-input-search-with-button"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <input
          class="ant-input"
          placeholder="input search text"
          type="text"
          value=""
        />
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-primary ant-input-search-button"
            type="button"
          >
            <span
              aria-label="search"
              class="anticon anticon-search"
              role="img"
              style="color:"
            >
              <svg
                aria-hidden="true"
                data-icon="search"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:16px"
  >
    <span
      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
        >
          <input
            class="ant-input ant-input-lg"
            placeholder="input search text"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
              role="button"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
            type="button"
          >
            <span>
              Search
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button"
    >
      <span
        class="ant-input-wrapper ant-input-group"
      >
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
        >
          <input
            class="ant-input ant-input-lg"
            placeholder="input search text"
            type="text"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <span
              aria-label="audio"
              class="anticon anticon-audio"
              role="img"
              style="font-size:16px;color:#2673dd"
            >
              <svg
                aria-hidden="true"
                data-icon="audio"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M842 454c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 140.3-113.7 254-254 254S258 594.3 258 454c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 168.7 126.6 307.9 290 327.6V884H326.7c-13.7 0-24.7 14.3-24.7 32v36c0 4.4 2.8 8 6.2 8h407.6c3.4 0 6.2-3.6 6.2-8v-36c0-17.7-11-32-24.7-32H548V782.1c165.3-18 294-158 294-328.1zM512 624c93.9 0 170-75.2 170-168V232c0-92.8-76.1-168-170-168s-170 75.2-170 168v224c0 92.8 76.1 168 170 168zm-94-392c0-50.6 41.9-92 94-92s94 41.4 94 92v224c0 50.6-41.9 92-94 92s-94-41.4-94-92V232z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="ant-input-group-addon"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
            type="button"
          >
            <span>
              Search
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/input/demo/search-input-loading.md correctly 1`] = `
Array [
  <span
    class="ant-input-group-wrapper ant-input-search"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input"
        placeholder="input search loading default"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-btn-icon-only ant-btn-loading ant-input-search-button"
          type="button"
        >
          <span
            class="ant-btn-loading-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-group-wrapper ant-input-search ant-input-search-with-button"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input"
        placeholder="input search loading with enterButton"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-loading ant-input-search-button"
          type="button"
        >
          <span
            class="ant-btn-loading-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </span>
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input ant-input-lg"
        placeholder="input search text"
        type="text"
        value=""
      />
      <span
        class="ant-input-group-addon"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-lg ant-btn-loading ant-input-search-button"
          type="button"
        >
          <span
            class="ant-btn-loading-icon"
          >
            <span
              aria-label="loading"
              class="anticon anticon-loading anticon-spin"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="loading"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                />
              </svg>
            </span>
          </span>
          <span>
            Search
          </span>
        </button>
      </span>
    </span>
  </span>,
]
`;

exports[`renders ./components/input/demo/show-count.md correctly 1`] = `
Array [
  <span
    class="ant-input-affix-wrapper"
  >
    <input
      class="ant-input"
      maxlength="20"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        class="ant-input-show-count-suffix"
      >
        0 / 20
      </span>
    </span>
  </span>,
  <br />,
  <br />,
  <div
    class="ant-input-textarea ant-input-textarea-show-count"
    data-count="0 / 100"
  >
    <textarea
      class="ant-input"
    />
  </div>,
]
`;

exports[`renders ./components/input/demo/size.md correctly 1`] = `
Array [
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
  >
    <span
      class="ant-input-prefix"
    >
      <span
        aria-label="user"
        class="anticon anticon-user"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
          />
        </svg>
      </span>
    </span>
    <input
      class="ant-input ant-input-lg"
      placeholder="large size"
      type="text"
      value=""
    />
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-affix-wrapper"
  >
    <span
      class="ant-input-prefix"
    >
      <span
        aria-label="user"
        class="anticon anticon-user"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
          />
        </svg>
      </span>
    </span>
    <input
      class="ant-input"
      placeholder="default size"
      type="text"
      value=""
    />
  </span>,
  <br />,
  <br />,
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-sm"
  >
    <span
      class="ant-input-prefix"
    >
      <span
        aria-label="user"
        class="anticon anticon-user"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
          />
        </svg>
      </span>
    </span>
    <input
      class="ant-input ant-input-sm"
      placeholder="small size"
      type="text"
      value=""
    />
  </span>,
]
`;

exports[`renders ./components/input/demo/textarea.md correctly 1`] = `
<textarea
  class="ant-input"
  rows="4"
/>
`;

exports[`renders ./components/input/demo/textarea-resize.md correctly 1`] = `
Array [
  <button
    class="ant-btn"
    style="margin-bottom:16px"
    type="button"
  >
    <span>
      Auto Resize: false
    </span>
  </button>,
  <textarea
    class="ant-input"
    rows="4"
  >
    The autoSize property applies to textarea nodes, and only the height changes automatically. In addition, autoSize can be set to an object, specifying the minimum number of rows and the maximum number of rows. The autoSize property applies to textarea nodes, and only the height changes automatically. In addition, autoSize can be set to an object, specifying the minimum number of rows and the maximum number of rows.
  </textarea>,
  <span
    class="ant-input-affix-wrapper ant-input-affix-wrapper-textarea-with-clear-btn"
    style="width:93px"
  >
    <textarea
      class="ant-input"
    />
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
      role="button"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </span>
  </span>,
]
`;

exports[`renders ./components/input/demo/textarea-show-count.md correctly 1`] = `
<div
  class="ant-input-textarea ant-input-textarea-show-count"
  data-count="0 / 100"
  style="height:120px"
>
  <textarea
    class="ant-input"
  />
</div>
`;

exports[`renders ./components/input/demo/tip.md correctly 1`] = `
Array [
  <span>
    <span
      class="ant-input-affix-wrapper"
    >
      <span
        class="ant-input-prefix"
      >
        <span
          aria-label="user"
          class="anticon anticon-user"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="user"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </span>
      </span>
      <input
        class="ant-input"
        placeholder="large size"
        tip="提示语"
        type="text"
        value=""
      />
    </span>
    <div
      class="ant-input-tip "
    >
      提示语
    </div>
  </span>,
  <br />,
  <br />,
  <span>
    <span
      class="ant-input-affix-wrapper ant-input-affix-wrapper-error"
    >
      <span
        class="ant-input-prefix"
      >
        <span
          aria-label="user"
          class="anticon anticon-user"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="user"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a4 4 0 012.13 7.39A6 6 0 0114 14v.5a.5.5 0 01-1 0V14a5 5 0 00-10 0v.5a.5.5 0 01-1 0V14a6 6 0 013.87-5.61A4 4 0 018 1zm0 1a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </span>
      </span>
      <input
        class="ant-input"
        placeholder="default size"
        tip="提示语"
        type="text"
        value=""
      />
    </span>
    <div
      class="ant-input-tip ant-input-tip-error"
    >
      提示语
    </div>
  </span>,
]
`;

exports[`renders ./components/input/demo/tooltip.md correctly 1`] = `
<input
  class="ant-input"
  maxlength="25"
  placeholder="Input a number"
  style="width:120px"
  type="text"
  value=""
/>
`;
